# GraphicsMath

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  _formulas.tex  abs_8h.html  abs_8h.js  abs_8h__incl.map  abs_8h__incl.md5  abs_8h_source.html  almost_8h.html  almost_8h.js  almost_8h__dep__incl.map  almost_8h__dep__incl.md5  almost_8h__incl.map  almost_8h__incl.md5  almost_8h_source.html  annotated.html  annotated_dup.js  bilinearInterpolation_8h.html  bilinearInterpolation_8h.js  bilinearInterpolation_8h__dep__incl.map  bilinearInterpolation_8h__dep__incl.md5  bilinearInterpolation_8h__incl.map  bilinearInterpolation_8h__incl.md5  bilinearInterpolation_8h_source.html  boolArray_8h.html  boolArray_8h.js  boolArray_8h__incl.map  boolArray_8h__incl.md5  boolArray_8h_source.html  build.sh  ceil_8h.html  ceil_8h.js  ceil_8h__incl.map  ceil_8h__incl.md5  ceil_8h_source.html  clamp_8h.html  clamp_8h.js  clamp_8h__incl.map  (+660 more)
src/gm/functions/: CMakeLists.txt  bilinearInterpolation.h  dotProduct.h  expand.h  isIdentity.h  length.h  lengthSquared.h  lerp.h  linearInterpolation.h  linearMap.h  lookAt.h  max.h  min.h  perspectiveProjection.h  quadraticRoots.h  randomNumber.h  rayPosition.h  raySphereIntersection.h  setIdentity.h  solveQuadraticRoots.h  transformPoint.h  transformVector.h  trilinearInterpolation.h
src/gm/functions/benchmarks/: CMakeLists.txt  benchmarkAbs.cpp  benchmarkBilinearInterpolation.cpp  benchmarkCeil.cpp  benchmarkClamp.cpp  benchmarkContains.cpp  benchmarkContent.cpp  benchmarkCoordinateSystem.cpp  benchmarkCrossProduct.cpp  benchmarkDegrees.cpp  (+42 more)
(+836 files in other folders)
